sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                    ^AlgCombSort:11: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                        ^AlgCombSort:11: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                                     ^AlgCombSort:11: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                                       ^