sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Double = getNombreValeurs()
  var switch=true
  var i=0
  while (ecart>1 || switch) {
    switch=false
    if (ecart>1) {ecart/=1.3}
    i=0
    while (i+ecart<getNombreValeurs()) {
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
      i+=1
    }
  }
}